<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Week One v.2</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="your_name">Team Count</string>
    <string name="click">Click</string>
    <string name="push">Push</string>
    <string name="index_choice">Index Choice</string>
    <string name="average_length">Average Length</string>
    <string name="Remove">Remove</string>
    <string name="Collection">Collection</string>


</resources>
