<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="#000000"
    style="bold"
    tools:context=".Main">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Favorite Team"
        android:id="@+id/editTextName"
        android:textColor="#FFFFFF"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/click"
                android:id="@+id/buttonClick"
                android:textColor="#FFFFFF"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Remove"
                android:id="@+id/buttonRemove"
                android:textColor="#FFFFFF"/>

            </LinearLayout>




    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_name"
        android:textSize="30sp"
        android:textColor="#FFFFFF"
        android:id="@+id/textViewName"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/average_length"
        android:textSize="30sp"
        android:textColor="#FFFFFF"
        android:id="@+id/textViewAvg"/>



    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="Select Index"
        android:textColor="#FFFFFF"
        android:id="@+id/editTextIndex"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/push"
        android:id="@+id/buttonPush"
        android:textColor="#FFFFFF"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/index_choice"
        android:textSize="30sp"
        android:textColor="#FFFFFF"
        android:id="@+id/textViewIndex"/>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Collection"
            android:id="@+id/buttonCollection"
            android:textColor="#FFFFFF"/>




    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:id="@+id/textViewCollection"
        android:textColor="#FFFFFF"/>


</LinearLayout>
